--- a/app/design/frontend/oc-theme/default/template/catalog/product/list/related.phtml
+++ b/app/design/frontend/oc-theme/default/template/catalog/product/list/related.phtml
@@ -25,50 +25,32 @@
  */
 ?>
 <?php if ($this->getItems()->getSize()): ?>
-    <div class="home-prods">
+    <div class="block-related">
 		<div class="container">
-			<div class="title">
-				<img src="<?php echo $this->getSkinUrl(); ?>images/related-title.png" />	   
-			</div>
+			<div class="title"><?php echo $this->__('Related Products') ?></div>
             <div class="home-block sale-block container-products product-grid">
 				<div id="owl-products" class="owl-carousel">
 					<?php foreach ($this->getItems() as $_product): ?>
 						<div class="item">
-							<div class="product-image-basket">
-								<a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>" class="product-image">
-									<img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(300,400); ?>" alt="<?php echo $this->htmlEscape($_product->getName()) ?>" />
-								</a>
-							<div class="cart-block">
-								<?php if($_product->isSaleable()): ?>
-									<a href="javascript:void(0);" data-href="<?php echo $this->getUrl('ajax/product/view/id/' . $_product->getId()) ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>" class="ajax quick-view"><?php echo $this->__('Add to Cart') ?> >></a>
-								<?php endif; ?>
-									<span class="hidden wishlistSubmitUrl"><?php echo $this->helper('wishlist')->getAddUrl($_product); ?></span>
-									<span class="hidden productId"><?php echo $_product->getId(); ?></span>						
-									<ul class="add-to-links">
-										<?php
-										$hasProduct = false;
-										if (isset($customerId) && isset($wishlist) && $customerId) {
-											$collection = Mage::getModel('wishlist/item')->getCollection()
-													->addFieldToFilter('wishlist_id', $wishlist->getId())
-													->addFieldToFilter('product_id', $_product->getId());
-											$hasProduct = ($collection->count() ? true : false);
-										}
-										$_wishlistItem = Mage::getModel('wishlist/item')->loadByProductWishlist(
-												$this->helper('wishlist')->getWishlist()->getId(), $_product->getId(), $_product->getStoreId()
-										);
-										?>
-										<?php if ($hasProduct): ?>
-											<li id="item-<?php echo $_product->getId(); ?>" class="in-wishlist"><a href="<?php echo $this->helper('wishlist')->getRemoveUrl($_wishlistItem); ?>" title="<?php echo $this->__('WHISHLIST') ?>" class="link-wishlist wishItem-<?php echo $_product->getId(); ?>">&nbsp;</a></li>
-										<?php else: ?>
-											<li id="item-<?php echo $_product->getId(); ?>"><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" title="<?php echo $this->__('WHISHLIST') ?>" class="link-wishlist wishItem-<?php echo $_product->getId(); ?>">&nbsp;</a></li>
-										<?php endif; ?>
-									</ul>								
-							</div>
-							</div>	
-							<div class="name-price">
-								<p class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>"><?php echo $_product->getName(); ?></a></p>
-								<div><?php echo $this->getPriceHtml($_product, true) ?></div>
-							</div>
+									<div class="image-block">
+										<a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image">
+											<div class="RegImg">
+												<img id="product-collection-image-<?php echo $_product->getId(); ?>" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(336, 259); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
+											</div>
+											<?php if($rotateImg): ?>
+												<div class="rotateImg"><?php echo $rotateImg; ?></div>
+											<?php endif; ?>								
+										</a>	
+										<div class="cart-block">
+											<?php if($_product->isSaleable()): ?>
+												<a href="javascript:void(0);" data-href="<?php echo $this->getUrl('ajax/product/view/id/' . $_product->getId()) ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>" class="ajax quick-view"><?php echo $this->__('Add to Cart') ?> >></a>
+											<?php endif; ?>								
+										</div>							
+									</div>                 
+									<div class="product-info">					
+										<h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_product->getName() ?></a></h2>
+										<?php echo $this->getPriceHtml($_product, true) ?>					
+									</div>
 						</div>
 					<?php endforeach ?>
 				</div>
